; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-news-recommend-extension.c_newsr_generate_new_key.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-news-recommend-extension.c_newsr_generate_new_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.newsr_gather_extra = type { i32, i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [44 x i8] c"%%raw_recommend_updates%d_%d,%d_%d_%d_%d:%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @newsr_generate_new_key(i8* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.newsr_gather_extra*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = bitcast i8* %11 to %struct.newsr_gather_extra*
  store %struct.newsr_gather_extra* %12, %struct.newsr_gather_extra** %9, align 8
  store i32 0, i32* %10, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load %struct.newsr_gather_extra*, %struct.newsr_gather_extra** %9, align 8
  %15 = getelementptr inbounds %struct.newsr_gather_extra, %struct.newsr_gather_extra* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.newsr_gather_extra*, %struct.newsr_gather_extra** %9, align 8
  %18 = getelementptr inbounds %struct.newsr_gather_extra, %struct.newsr_gather_extra* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.newsr_gather_extra*, %struct.newsr_gather_extra** %9, align 8
  %21 = getelementptr inbounds %struct.newsr_gather_extra, %struct.newsr_gather_extra* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.newsr_gather_extra*, %struct.newsr_gather_extra** %9, align 8
  %24 = getelementptr inbounds %struct.newsr_gather_extra, %struct.newsr_gather_extra* %23, i32 0, i32 3
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.newsr_gather_extra*, %struct.newsr_gather_extra** %9, align 8
  %27 = getelementptr inbounds %struct.newsr_gather_extra, %struct.newsr_gather_extra* %26, i32 0, i32 4
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.newsr_gather_extra*, %struct.newsr_gather_extra** %9, align 8
  %30 = getelementptr inbounds %struct.newsr_gather_extra, %struct.newsr_gather_extra* %29, i32 0, i32 5
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.newsr_gather_extra*, %struct.newsr_gather_extra** %9, align 8
  %33 = getelementptr inbounds %struct.newsr_gather_extra, %struct.newsr_gather_extra* %32, i32 0, i32 6
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @sprintf(i8* %13, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %19, i32 %22, i32 %25, i32 %28, i32 %31, i32 %34)
  store i32 %35, i32* %10, align 4
  %36 = load i32, i32* %10, align 4
  ret i32 %36
}

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
